--- a/app/src/main/res/values-no/strings.xml
+++ b/app/src/main/res/values-no/strings.xml
@@ -204,6 +204,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">Topp</string>
     <string name="bottom">Bunn</string>
     <string name="center">Midtstilt</string>
+    <string name="actionbutton_spacing">Avstand mellom handlingsknapper</string>
+    <string name="horizontal_space_between_actionbuttons">Horisontalt mellomrom mellom handlingsknapper</string>
     <string name="center_text">Sentrer tekst</string>
     <string name="edit_text_in_center_of_screen">Rediger tekst i midten av skjermen</string>
     <string name="clipboard">Utklippstavle</string>
