--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -204,8 +204,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="top">顶端</string>
     <string name="bottom">底端</string>
     <string name="center">居中</string>
-    <string name="actionbutton_spacing">动作按钮间距</string>
-    <string name="horizontal_space_between_actionbuttons">动作按钮之间的水平空间</string>
+    <string name="actionbutton_spacing">ActionButton 间距</string>
+    <string name="horizontal_space_between_actionbuttons">ActionButtons 之间的水平间距</string>
     <string name="center_text">居中文字</string>
     <string name="edit_text_in_center_of_screen">在屏幕中央编辑文本</string>
     <string name="clipboard">剪切板</string>
