--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -32,7 +32,36 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="file_folder_already_exists_please_use_a_different_name">Súbor/priečinok už existuje. Prosím, použite iný názov</string>
     <string name="import_from_device">Importovať zo zariadenia</string>
     <string name="import_">Importovať</string>
+    <string name="append_to_witharg">Pripnúť ku %s</string>
+    <string name="select_folder">Vybrať zložku</string>
+    <string name="edit">Upraviť</string>
+    <string name="search_documents">Prehľadať dokumenty</string>
+    <string name="share_to_arrow" tools:ignore="TypographyEllipsis">Zdieľať do&#8230;</string>
+    <string name="share">Zdieľať</string>
+    <string name="search">Hľadať</string>
+    <string name="display_converted_markup">Zobraziť konvertovaný markup</string>
+    <string name="editor">Editor</string>
+    <string name="folders">Priečinky</string>
+    <string name="files">Súbory</string>
+    <string name="document">Dokumenty</string>
+    <string name="documents">Dokumenty</string>
+    <string name="html_as_plaintext">HTML (ako obyčajný text)</string>
+    <string name="document_editor_font">Font dokumentového editoru</string>
+    <string name="theme">Motív</string>
+    <string name="open_existing_files_in_view_mode">Otvoriť existujúci súbor v zobrazovacom móde</string>
     <string name="about">O aplikacii</string>
+    <string name="plaintext">Obyčajný text</string>
+    <string name="file">Súbor</string>
+    <string name="image">Obrázok</string>
+    <string name="font_size">Veľkosť písma</string>
+    <string name="render_rtl_language">Zobrazenie pre jazyky čítajúce s prava do ľava</string>
+    <string name="error_cannot_create_notebook_dir__appspecific">Chyba: Nedá sa vytvoriť zápisníkový priečinok</string>
+    <string name="last_modified_witharg">Naposledy upravené: %s</string>
+    <string name="last_modified">Naposledy upravené</string>
+    <string name="select_this_folder">Vybrať túto zložku</string>
+    <string name="select">Vybrať</string>
+    <string name="create">Vytvoriť</string>
+    <string name="select_entries">Vybrať položky</string>
     <string name="add_task">Pridaj ulohu</string>
     <string name="add_x_witharg">Pridaj %s</string>
     <string name="always_use_current_date_and_time">Vzdycky vyuzivaj sucasny datum a cas</string>
