--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -438,6 +438,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="share_into_format">المشاركة في - التنسيق</string>
     <string name="auto_format">تنسيق تلقائي</string>
     <string name="insert_snippet">Insert snippet</string>
-    <string name="document_error_exit">خطأ: تعذر الفتح.</string>
+    <string name="document_error">خطأ: تعذر الفتح.</string>
     <string name="document_error_clip">حدث خطأ: تم نسخ النص إلى الحافظة.</string>
 </resources>
